--- a/amadou.css
+++ b/amadou.css
@@ -1,7 +1,7 @@
 body {
 	background-color: #e0ebe8;
 	color: rgb(0, 179, 153);
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Ubuntu', sans-serif;
 	font-weight: 100;
 	-webkit-font-smoothing: antialiased;
 	line-height: 1.42857143;
@@ -225,8 +225,16 @@ nav {
 
   #yayay {
 	  position: relative;
-
   }
+
+  #yayay2 {
+	position: relative;
+
+}
+
+.work {
+	z-index: 1000;
+}
 
   #nuage {
 		position: absolute;
@@ -236,6 +244,15 @@ nav {
 		z-index: -980;
 		animation: cloudanim2 9s infinite 0s linear;
   }
+
+  #nuage3 {
+	position: absolute;
+	bottom : -2%;
+	left: 15%;
+	transition: all 1s ease-in-out;
+	z-index: -980;
+	animation: cloudanim2 9s infinite 0s linear;
+}
 
   #nuage-2 {
 	position: absolute;
@@ -321,21 +338,17 @@ nav {
 	margin-top: 1.5rem;
 }
 
-.btn-primary {
+.message {
     color: #fff;
     background-color: rgb(0, 133, 106);
 	border-color: rgb(0, 133, 106);
 	color: rgb(0, 179, 153);
 }
 
-.btn-primary:hover {
+.message:hover {
     background-color: rgb(0, 133, 106);
 	border-color: white;
-	color: rgb(0, 179, 153);
-}
-
-.btn-primary:active{
-	background-color: red;
+	color: white;
 }
 
 .foot{
@@ -417,3 +430,120 @@ footer ul a:hover{
         transform: rotate(0) translateX(-30px);
         }
 }
+
+#container7 {
+	background-color:rgb(95,206,141)
+
+	}
+
+	#container8 {
+		background-color:rgb(247,97,96)
+	
+		}
+
+	.shot img {
+		max-width: 100%;
+		height: auto;
+	}
+
+	.tableres {
+		color: white;
+	}
+
+	.dribble {
+		background-color: rgb(38,61,83);
+		color: white;
+	}
+
+	.dribble:hover {
+		background-color: rgb(0,0,21);
+		color: white;
+	}
+
+	#container9 {
+		background-color: rgb(49,52,94);
+	}
+
+	#container10 {
+		background-color: rgb(255,196,124);
+	}
+
+	.journey {
+		background-color: rgb(0,84,98);
+		color: white;
+	}
+
+	.journey:hover {
+		background-color: rgb(0,0,21);
+		color: white;
+	}
+
+	#container11 {
+		background-color: rgb(26,54,77);
+	}
+
+	.sherpa {
+		background-color: rgb(255,226,141);
+		color: rgb(158,119,0);
+	}
+
+	.sherpa:hover {
+		background-color: rgb(241,211,87);
+		color: rgb(158,119,0);
+	}
+
+	#container12 {
+		background-color: rgb(239,144,104);
+	}
+
+	.relati {
+		background-color: rgb(220,96,14);
+		color: white;
+	}
+
+	.relati:hover {
+		background-color: rgb(153,86,47);
+		color: white;
+	}
+
+	#container13 {
+		background-color: rgb(83,169,216);
+	}
+
+	.trizi {
+		color: rgb(0,145,207);
+		background-color: rgb(155,216,253);
+	}
+
+	.trizi:hover{
+		color: rgb(0,145,207);
+		background-color: rgb(137,192,241);
+	}
+
+	#container14 {
+		background-color: rgb(255,97,97);
+	}
+
+	.retro {
+		background-color: rgb(255,67,68);
+		color: rgb(213,0,0);
+	}
+
+	.retro:hover {
+		background-color: rgb(228,78,66);
+		color: white;
+	}
+
+	#container15 {
+		background-color: rgb(87,153,149);
+	}
+
+	.king {
+		background-color: rgb(78,138,134);
+		color: white;
+	}
+
+	.king:hover {
+		background-color: rgb(91,121,119);
+		color: white;
+	}
