--- a/amadou.css
+++ b/amadou.css
@@ -15,6 +15,17 @@ body {
 	font-weight: 300;
 	text-align: center;
 }
+
+#prez2 p{
+	padding: 1rem;
+	margin: 0 auto;
+	font-weight: 300;
+	text-align: left;
+	color: rgb(84, 84, 84);
+	width: 70%;
+}
+
+
 html, body {
 	overflow-x: hidden;
 }
@@ -546,4 +557,8 @@ footer ul a:hover{
 	.king:hover {
 		background-color: rgb(91,121,119);
 		color: white;
+	}
+
+	div #spec {
+		color: rgb(31, 103, 90);
 	}
